; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_shader.c_string_buffer_vsprintf.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_shader.c_string_buffer_vsprintf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_string_buffer = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wined3d_string_buffer*, i8*, i32)* @string_buffer_vsprintf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @string_buffer_vsprintf(%struct.wined3d_string_buffer* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.wined3d_string_buffer*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.wined3d_string_buffer* %0, %struct.wined3d_string_buffer** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %5, align 8
  %9 = icmp ne %struct.wined3d_string_buffer* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %18

11:                                               ; preds = %3
  %12 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %5, align 8
  %13 = call i32 @string_buffer_clear(%struct.wined3d_string_buffer* %12)
  %14 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %5, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @shader_vaddline(%struct.wined3d_string_buffer* %14, i8* %15, i32 %16)
  store i32 %17, i32* %4, align 4
  br label %18

18:                                               ; preds = %11, %10
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local i32 @string_buffer_clear(%struct.wined3d_string_buffer*) #1

declare dso_local i32 @shader_vaddline(%struct.wined3d_string_buffer*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
